--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "json-loader": "^0.5.7",
     "mongodb": "^3.0.6",
+    "node-sass-middleware": "^0.11.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
